--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@eddeee888/poc-jest-to-vitest": ["packages/jest-to-vitest/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
