--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "commander": "10.0.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "28.1.1",
@@ -25,6 +26,7 @@
     "nx": "15.6.2",
     "prettier": "^2.6.2",
     "ts-jest": "28.0.5",
+    "ts-morph": "17.0.1",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
   }
