--- a/packages/jest-to-vitest/package.json
+++ b/packages/jest-to-vitest/package.json
@@ -1,9 +1,15 @@
 {
   "name": "@eddeee888/poc-jest-to-vitest",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "Migrate from Jest to Vitest (mostly)",
   "author": "Eddy Nguyen <ch@eddeee888.me>",
   "license": "MIT",
+  "homepage": "https://github.com/eddeee888/proof-of-concepts/blob/master/packages/jest-to-vitest/README.md",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eddeee888/proof-of-concepts.git",
+    "directory": "packages/jest-to-vitest"
+  },
   "bin": {
     "jest2vitest": "./src/bin.js"
   },
