--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.0",
     "@nrwl/eslint-plugin-nx": "15.6.2",
     "@nrwl/jest": "15.6.2",
     "@nrwl/js": "15.6.2",
