--- a/packages/jest-to-vitest/package.json
+++ b/packages/jest-to-vitest/package.json
@@ -16,5 +16,8 @@
   "dependencies": {
     "commander": "^10.0.0",
     "ts-morph": "^17.0.0"
+  },
+  "publishConfig": {
+    "directory": "../../dist/packages/jest-to-vitest"
   }
 }
