--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "ts-morph": "17.0.1",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
-  }
+  },
+  "workspaces": [
+    "packages/**"
+  ]
 }
