--- a/packages/jest2vitest/project.json
+++ b/packages/jest2vitest/project.json
@@ -1,32 +1,32 @@
 {
-  "name": "jest-to-vitest",
+  "name": "jest2vitest",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "packages/jest-to-vitest/src",
+  "sourceRoot": "packages/jest2vitest/src",
   "projectType": "library",
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/jest-to-vitest",
-        "tsConfig": "packages/jest-to-vitest/tsconfig.lib.json",
-        "packageJson": "packages/jest-to-vitest/package.json",
-        "main": "packages/jest-to-vitest/src/index.ts",
-        "assets": ["packages/jest-to-vitest/*.md"]
+        "outputPath": "dist/packages/jest2vitest",
+        "tsConfig": "packages/jest2vitest/tsconfig.lib.json",
+        "packageJson": "packages/jest2vitest/package.json",
+        "main": "packages/jest2vitest/src/index.ts",
+        "assets": ["packages/jest2vitest/*.md"]
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["packages/jest-to-vitest/**/*.ts"]
+        "lintFilePatterns": ["packages/jest2vitest/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/jest-to-vitest/jest.config.ts",
+        "jestConfig": "packages/jest2vitest/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
@@ -39,7 +39,7 @@
     "e2e": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "packages/jest-to-vitest/e2e/scripts/e2e.sh"
+        "command": "packages/jest2vitest/e2e/scripts/e2e.sh"
       }
     }
   },
