--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -13,6 +13,8 @@ env:
 jobs:
   release-check:
     runs-on: ubuntu-22.04
+    permissions:
+      issues: read|write
     outputs:
       triggered: ${{ steps.check.outputs.triggered }}
     steps:
@@ -54,6 +56,9 @@ jobs:
   release:
     runs-on: ubuntu-22.04
     needs: release-check
+    permissions:
+      issues: write
+      pull-requests: read
     if: needs.release-check.outputs.triggered == 'true'
     steps:
       - name: Get Pull Request ref
