--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -14,7 +14,8 @@ jobs:
   release-check:
     runs-on: ubuntu-22.04
     permissions:
-      issues: write
+      # contents: write
+      pull-requests: write
     outputs:
       triggered: ${{ steps.check.outputs.triggered }}
     steps:
@@ -57,8 +58,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: release-check
     permissions:
-      issues: write
-      pull-requests: read
+      pull-requests: write
     if: needs.release-check.outputs.triggered == 'true'
     steps:
       - name: Get Pull Request ref
